# amp-voter

./: .gitmodules  CMakeLists.txt  README.md
micro-ip/: README.md  poll.h
micro-ip/arpa/: inet.h
micro-ip/impl-pico/: main.c  main2.c
micro-ip/netinet/: in.h
micro-ip/sys/: socket.h
src/: SignalGenerator.cpp  VoterClient.cpp  VoterClient.h  main.cpp  sim-main.cpp
